# Bots

./: .gitignore  NEXT_STEPS.md  PROJECT_SUMMARY.md  PUSH_TO_GITHUB.md  QUICK_START.txt  README.md  SELECTOR_UPDATE_GUIDE.md  SETUP_GUIDE.md  TESTING_SUMMARY.md  alembic.ini  availity_session_cookies.json  env.example  pyproject.toml  requirements.txt  run_api.py  test_claim_status_api.py  test_eligibility.py  test_login_only.py  test_navigation.py
alembic/: env.py
api/: POSTMAN_EXAMPLES.md  README.md  TESTING.md  __init__.py  driver_manager.py  models.py  run_server.py  server.py
artifacts/: .gitkeep
bots/: __init__.py  appeals_bot.py  claim_status_bot.py  claims_bot.py  drug_prior_auth_bot.py  eligibility_bot.py
config/: settings.py
core/: __init__.py  driver_factory.py  errors.py  keep_alive.py  logging.py  session_manager.py
db/: __init__.py  engine.py  models.py  repo_appeals.py  repo_claim_status.py  repo_eligibility.py
domain/: __init__.py  appeals_models.py  claim_status_models.py  claims_models.py  drug_prior_auth_models.py  eligibility_models.py
pages/: __init__.py  appeals_page.py  base_page.py  claim_status_page.py  claims_page.py  dashboard_page.py  drug_prior_auth_page.py  eligibility_page.py  login_page.py
sample/: extracted_eligibility_data.json  input_appeals.json  input_claim_status.json  input_claims.json  input_drug_prior_auth.json  input_eligibility.json  input_eligibility_multiple.json  output_appeals.json  output_claim_status.json  output_claims.json  output_eligibility.json  output_multiple.json  output_test.json  (+1 more)
(+13 files in other folders)
